# attention_autotuner

./: .gitignore  README.md
benchmarks/: CMakeLists.txt  attention.cu  configs.h  do_bench.cuh
benchmarks/retnet/: CMakeLists.txt  retnet.cu  retnet_bwd.cu
csrc/: test_hardware.cu
csrc/kernels/attention/regfuse/: nnfusion_rt.h  profile_code.py  regfuse.h  welder_cuda.h
csrc/kernels/attention/smemfuse/: nnfusion_rt.h  profile_code.py  smemfuse.h
csrc/kernels/retnet/bwd/: bwd_colblock.h  profile_code.py
csrc/kernels/retnet/recurrent/: recurrent.h
csrc/kernels/retnet/regfuse/: profile_code.py  regfuse.h
csrc/kernels/retnet/smemfuse/: profile_code.py  smemfuse.h
csrc/kernels/utils/: elementwise.h  gmem_copy.h  matmul.h  misc.h  reduce.h  welder_cuda.h
docs/: kernel_development_template.md
docs/tuning_result_A100/: profile_result_attn_256_256.txt  profile_result_ret_256_256.txt
docs/tuning_result_RTX4090/: profile_result_attn_128_128.txt  profile_result_attn_256_128.txt  profile_result_attn_256_256.txt  profile_result_attn_256_64.txt  profile_result_attn_64_64.txt
python/: base_tunner.py  compiler.py  config.py  demo_attn.py  runtime.py  tunner.py
python/arch/: __init__.py
python/autotuner/: base_tunner.py  runtime.py  tunner.py
python/autotuner/configs/: __init__.py  attention.py  base_config.py  config.py  retnet.py  retnet_bwd.py
python/benchmarks/: bench_attention.py  bench_retnet.py  do_bench.py  pytorch_attention.py
python/ops/: attention_interface.py  retnet_interface.py
python/tests/: 111.ipynb  222.ipynb  attntuner_demo.py  export_costmodel_config.py  ncu_profile.py  test_retbwdtunner.py  test_runtime.py  test_runtime_for_profile.py
python/tests/results_v1/: attn_128_128.csv  attn_128_128.pkl  attn_128_128_pred.csv  attn_128_128_pred_filtered.csv  attn_256_128.csv  attn_256_128.pkl  attn_256_128_pred.csv  attn_256_128_pred_filtered.csv
python/tests/results_v2/: attn_128_128.csv  attn_128_128.pkl  attn_128_128_pred.csv  attn_128_128_pred_filtered.csv  attn_256_128.csv  attn_256_128.pkl  attn_256_128_pred.csv  attn_256_128_pred_filtered.csv  attn_256_256.csv  attn_256_256.pkl  attn_256_256_pred.csv  attn_256_256_pred_filtered.csv
python/utils/: misc.py  ref_op.py
